src/test/ui/parser/default.stderr
error: expected one of `async`, `const`, `extern`, `fn`, `pub`, `unsafe`, or `use`, found keyword `pub`
  --> $DIR/default.rs:24:13
   |
LL | impl Foo for u32 {
   |                  - while parsing this item list starting here
LL |     default pub fn foo<T: Default>() -> T { T::default() }
   |             ^^^
   |             |
   |             expected one of 7 possible tokens
   |             help: visibility `pub` must come before `default pub`: `pub default pub`
LL |
LL | }
   | - the item list ends here

error[E0449]: unnecessary visibility qualifier
  --> $DIR/default.rs:18:5
   |
LL |     pub default fn foo<T: Default>() -> T {
   |     ^^^ `pub` not permitted here because it's implied

warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/default.rs:4:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0046]: not all trait items implemented, missing: `foo`
  --> $DIR/default.rs:23:1
   |
LL |     fn foo<T: Default>() -> T;
   |     -------------------------- `foo` from trait
...
LL | impl Foo for u32 {
   | ^^^^^^^^^^^^^^^^ missing `foo` in implementation

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0046, E0449.
For more information about an error, try `rustc --explain E0046`.
